k8s/deployment.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: homologacao
---
# Deployment da aplicação
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
  namespace: homologacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      containers:
        - name: reviewfilmes
          image: limalucas99/master-ci-cd
          ports:
            - containerPort: 8080
---
# Service como ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
  namespace: homologacao
spec:
  selector:
    app: reviewfilmes
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
# Ingress usando o Ingress Controller nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes
  namespace: homologacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: limalucas99.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviewfilmes
                port:
                  number: 80
